--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,8 @@ ul {
     display: flex;
     align-items: center;
     justify-content: space-between;
-
+}
+.logo {
     border-bottom: 1px solid var(--CORNFLOWER, #E7E9FC);
 }
 
@@ -200,7 +201,7 @@ ul {
 }
 .wrap-text {
     margin-bottom: 8px;
-    align-items: center;
+    text-align: center;
 
     font-weight: 500;
     font-size: 20px;
@@ -209,7 +210,7 @@ ul {
 }
 
 .text {
-    align-items: center;
+    text-align: center;
 
     font-size: 16px;
     line-height: 1.5;
@@ -268,6 +269,7 @@ ul {
 .list-picture {
     padding: 32px 16px;
     border: 1px solid var(--CORNFLOWER, #E7E9FC);
+    border-top: none;
 }
 
 /* #endregion Our Portfolio */
@@ -279,6 +281,7 @@ ul {
     background-color: var(--secondary-color-text); 
 }
 .wrapper {
+    display: inline-block;
     margin-bottom: 16px;
 }
 .wrapper:hover, .wrapper:focus {
