--- a/css/styles.css
+++ b/css/styles.css
@@ -39,10 +39,8 @@ a {
     text-decoration: none;
     cursor: pointer;
 }
-li {
-    list-style-type: none;
- }
 ul {
+    list-style-type: none;
     margin: 0;
     padding-left: 0;
 }
@@ -196,13 +194,12 @@ ul {
     gap: 24px;
 }
 .list-item {
-    width: 264px;
+    width: calc((100% - 3 * 24px) / 4);
 
 }
 .wrap-text {
     margin-bottom: 8px;
-    text-align: center;
-
+    
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -210,8 +207,6 @@ ul {
 }
 
 .text {
-    text-align: center;
-
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
